[package]
name = "chessgui"
version = "0.1.0"
author = "Olle Thomsen <olleth@kth.se>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7.0"
linked-hash-map = "0.5.4"
jblomlof-chess = { git = "https://github.com/IndaPlus22/jblomlof-chess" }
chess = "3.2.0"